# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml
brain_games/: calc.py  cli.py  engine.py  find_gcd.py  generate_progression.py  is_even.py  is_prime.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
